Revert "Merge branch 'master' into alumni_collection"
This reverts commit a8ad62a4ed7c1f901a50e5140697add7807d9f21, reversing
changes made to 82d02f351ecc28a2224074ee2111f1cfdb77c323.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,13 +5,11 @@ Professor <br>
 Department of Bioengineering and Therapeutic Sciences <br>
 California Institute of Quantitative Biosciences (QB3) <br>
 <br>
-email: jfraser (at) fraserlab.com <br>
-tel (office): 415 502 1863 <br>
-tel (lab): 415 502 3488 <br>
+email: jfraser (#!) fraserlab.com <br>
 <br>
-600 16th Street <br>
-Genentech Hall S472E (office), S476 (lab) <br>
+Genentech Hall Room S472E (Office), S476 (Lab) <br>
 UCSF Mail Code 2240 <br>
+600 16th Street <br>
 San Francisco, CA 94158 <br>
 </p>
 
