--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#052049">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     {% if page.group == 'news' %}
-    <link rel="alternate" type="application/atom+xml" title="Fraser Lab News Feed" href="/news.xml">
+    <link rel="alternate" type="application/atom+xml" title="Stajich Lab News Feed" href="/news.xml">
     {% endif %}
 
     <!-- <link href="/static/css/bootstrap.css" rel="stylesheet"> -->
@@ -29,7 +29,7 @@
 
     <!-- Static navbar -->
     <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #052049">
-        <a class="navbar-brand" href="/">{{site.name}}</a>
+        <!-- <a class="navbar-brand" href="/">{{site.name}}</a> -->
         <a href="http://www.ucsf.edu"><img class="inline-block navb-icon" src="/static/img/ucsf_logo_white.svg"></a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
