--- a/_includes/inclusion.html
+++ b/_includes/inclusion.html
@@ -2,7 +2,7 @@
 <hr>
 <div id="inclusion">
   <div class="container">
-    <p class="text-muted credit"> The Fraser lab welcomes people of any race, ethnicity, religion, national origin, gender identity,
+    <p class="text-muted credit"> The Stajich lab welcomes people of any race, ethnicity, religion, national origin, gender identity,
             gender expression, caregiver and family commitments, political affiliation, sexual orientation, and eligible age or ability.<br>
     See our<a href="/compact/"> lab compact and philosophy</a>.</p>
   </div>
