--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,7 +30,7 @@
     <!-- Static navbar -->
     <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #052049">
         <!-- <a class="navbar-brand" href="/">{{site.name}}</a> -->
-        <a href="/"><img class="inline-block navb-icon" src="/static/img/Stajichlab.png"></a>
+        <a href="/"><img class="inline-block navb-icon" src="/static/img/Stajichlab1.png"></a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
