--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,20 +1,21 @@
 <h3>Contact Us</h3>
 <p>
-James Fraser, Ph.D. <br>
+Jason E. Stajich, Ph.D. <br>
 Professor <br>
-Department of Bioengineering and Therapeutic Sciences <br>
-California Institute of Quantitative Biosciences (QB3) <br>
+Department of Microbiology and Plant Pathology <br>
+Institute for Integrative Genome Biology <br>
 <br>
-email: jfraser (#!) fraserlab.com <br>
-<br>
+email: jason.stajich (AT) ucr.edu <br>
+
+<!-- <br>
 Genentech Hall Room S472E (Office), S476 (Lab) <br>
 UCSF Mail Code 2240 <br>
 600 16th Street <br>
 San Francisco, CA 94158 <br>
-</p>
+</p> -->
 
 <p>
- <h3> Interested in joining the Fraser lab? </h3>
+ <h3> Interested in joining the Stajich lab? </h3>
  We don’t generally post for specific positions, <a href="{{ site.url }}/join">so please reach out!</a> We welcome applicants from all backgrounds.<br>
 </p>
 
