--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,7 @@
     <hr>
     <div id="footer footer-fixed-bottom">
       <div class="container">
+          Stajich Lab at University of California Riverside<br>
         <p class="text-muted credit"> This website is open-source and available on <a href="https://github.com/stajichlab.github.io">Github</a>.</p>
       </div>
     </div>
