--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,6 +1,6 @@
 {% include header.html %}
 
-<div class = "page header"><h1>Welcome to the Stajich Lab! </h1></div>
+<div class = "page header"><h1 style="text-align:center;">Welcome to the Stajich Lab! </h1></div>
 <div class="container px-2 max-width: 100%">
     <img class="img-fluid mx-auto d-block" src="/static/img/StajichLabPic.jpg" alt="Stajch lab at UCR">
     <div class="row"> 
