--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,9 +1,11 @@
 {% include header.html %}
 
 <div class = "page header"><h1 style="text-align:center;">Welcome to the Stajich Lab! </h1></div>
+
 <div class="container px-2 max-width: 100%">
     <img class="img-fluid mx-auto d-block" src="/static/img/StajichLabPic.jpg" alt="Stajch lab at UCR">
-    <div class="row"> 
+    {{ content }}
+    <!-- <div class="row"> 
         <div class="col-sm-8">	
     	    <div class="jumbotron h-100">
         	    {{ content }}
@@ -12,6 +14,6 @@
         <div class="col">
             {% include sidebar.html %}
         </div>
-    </div>
+    </div> -->
 </div>
 {% include footer.html %}
