--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,7 @@
 <p>
 Jason E. Stajich, Ph.D. <br>
 Professor <br>
-Department of Microbiology and Plant Pathology <br>
+Dept of Microbiology and Plant Pathology <br>
 Institute for Integrative Genome Biology <br>
 <br>
 email: jason.stajich (AT) ucr.edu <br>
