--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,4 +1,5 @@
 <h3>Contact Us</h3>
+<img class="img-fluid mx-auto d-block" src="/static/img/JES.jpg" alt="Jason Stajch">
 <p>
 Jason E. Stajich, Ph.D. <br>
 Professor <br>
