--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,12 +1,14 @@
 <h3>Contact Us</h3>
 <img class="img-fluid mx-auto d-block" src="/static/img/JES.jpg" alt="Jason Stajch">
+<br>
 <p>
 Jason E. Stajich, Ph.D. <br>
 Professor <br>
 Dept of Microbiology and Plant Pathology <br>
 Institute for Integrative Genome Biology <br>
-<br>
+Center for Plant Cell Biology <br>
 email: jason.stajich (AT) ucr.edu <br>
+</p>
 
 <!-- <br>
 Genentech Hall Room S472E (Office), S476 (Lab) <br>
