--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
     </div>
     <hr>
-    <div id="footer footer-fixed-bottom", style="background-color:#005581;">
+    <div id="footer footer-fixed-bottom">
       <div class="container">
         <p class="text-muted credit"> Stajich Lab at University of California Riverside.<br> This website is open-source and available on <a href="https://github.com/stajichlab.github.io">Github</a>.</p>
       </div>
