--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
     </div>
     <hr style="background-color:#052d69;">
-    <div id="footer footer-fixed-bottom">
-      <div class="container">
+    <div id="footer footer-fixed-bottom", style="background-color:#052d69;">
+      <div class="container", style="background-color:#052d69;">
         <p class="text-muted credit"> Stajich Lab at University of California Riverside.<br> This website is open-source and available on <a href="https://github.com/stajichlab.github.io">Github</a>.</p>
       </div>
     </div>
