--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
     </div>
     <!-- <hr style="background-color:#052d69;"> -->
-    <div id="footer footer-fixed-bottom", style="background-color:#052d69;">
+    <div id="footer footer-fixed-bottom">
       <div class="container", style="background-color:#052d69;">
-        <p class="text-muted credit", style="color:Tomato;"> <br> Stajich Lab at University of California Riverside.<br> This website is open-source and available on <a href="https://github.com/stajichlab.github.io">Github</a>.</p>
+        <p class="text-muted credit", style="color:Tomato;"> <br> Stajich Lab at University of California Riverside.<br> This website is open-source and available on <a href="https://github.com/stajichlab.github.io">Github</a>. <br></p>
       </div>
     </div>
 
