--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <!-- <hr style="background-color:#052d69;"> -->
     <div id="footer footer-fixed-bottom">
       <div class="container", style="background-color:#052d69;">
-        <p class="text-muted credit", style="color:Tomato;"> <br> Stajich Lab at University of California Riverside.<br> This website is open-source and available on <a href="https://github.com/stajichlab.github.io">Github</a>. <br></p>
+        <p class="text-muted credit", style="text-align:center"> <br> Stajich Lab at University of California Riverside.<br> This website is open-source and available on <a href="https://github.com/stajichlab.github.io">Github</a>.</p>
       </div>
     </div>
 
