--- a/_layouts/members.html
+++ b/_layouts/members.html
@@ -1,6 +1,6 @@
 {% include header.html %}
 <div class="container">
-   <img class="img-fluid" src="/static/img/members/drawings/2020_FraserLab_3.png" title="This wonderful illustration was courtesy of Jennifer Li" alt="Lab Group Illustration (credit Jennifer Li)">
+   <img class="img-fluid" src="/static/img/members/StajichLabPic_crop.jpg" title="Stajich lab members" alt="Lab Group Photo">
    <div class="row">
        <div class="col-sm-9">
            <br>
@@ -13,6 +13,6 @@
     </div>
 </div>
 <br>
-<img class="img-fluid" src="/static/img/members/drawings/2019_FraserLabAlumni_2.png" alt="We miss our alumni!">
+<!-- <img class="img-fluid" src="/static/img/members/drawings/2019_FraserLabAlumni_2.png" alt="We miss our alumni!"> -->
 </div>
 {% include footer.html %}
