--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <div id="footer footer-fixed-bottom", style="background-color:#052d69;">
       <div class="container", style="background-color:#052d69;">
         <p class="text-muted credit", style="text-align:center"> <br> Stajich Lab at University of California Riverside.<br> 
-            This website is open-source and available on <a href="https://github.com/stajichlab.github.io">Github</a>. <br>
+            This website is open-source and available on <a href="https://github.com/stajichlab/tajichlab.github.io">Github</a>. <br>
             It uses templates from the <a href="https://fraserlab.com/2020/05/03/Clone-this-website/">Fraser Lab</a>.</p>
       </div>
     </div>
